cli/tests/error_001.ts
function foo(): never {
  throw Error("bad");
}

function bar(): void {
  foo();
}

bar();
